# Celonis

./: CMakeLists.txt  README.md
include/: Cache.hpp  Disk.hpp  KeyValueStore.hpp  Strategy.hpp
interactive/: Cache_interactive.cpp  Disk_interactive.cpp  KeyValueStore_FIFO_interactive.cpp  KeyValueStore_LFU_interactive.cpp  KeyValueStore_LRU_interactive.cpp
test/: unit_tests.cpp
